[package]
name = "scheme-rs"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
combine = "3.6.3"
num-complex = "0.2.1"
num-rational = "0.2.1"
either = "1.5.0"
phf = "0.7.23"

[build-dependencies]
phf_codegen = "0.7.23"
failure = "0.1.4"
